--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
     <version>1.0-SNAPSHOT</version>
     <name>CafeShop</name>
 
-    <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
-    <dependency>
-        <groupId>com.mysql</groupId>
-        <artifactId>mysql-connector-j</artifactId>
-        <version>8.0.33</version>
-    </dependency>
+<!--     https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+<!--    <dependency>-->
+<!--        <groupId>com.mysql</groupId>-->
+<!--        <artifactId>mysql-connector-j</artifactId>-->
+<!--        <version>8.0.33</version>-->
+<!--    </dependency>-->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
